--- a/templates/footer.html
+++ b/templates/footer.html
@@ -44,11 +44,9 @@ transform: translateX(-45%);
 				<div class="col" style="display:block; line-height: 1vh;">
 					<p class="footer-title" style="font-size: 1.25em; letter-spacing: -0.07; font-family: 'Libre Baskerville', serif;">Other</p>
 					<hr style="color: white;">
-					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/privacy">privacy</a></p>
-					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/privacy">privacy</a></p>
 					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/thanks">Thanks!</a></p>
 					<p style="font-size:0.8em;">contact:</p>
-					<p style="font-size:0.8em;">alexanderjwells04@gmail.com</p>
+					<p style="font-size:0.8em;">datacember@gmail.com</p>
 				</div>
 
 
