--- a/templates/cold.html
+++ b/templates/cold.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Froth Flotation</title>
+<title>SQLippery when Icy!</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -98,6 +98,11 @@ window.Quarto = {
 };
 </script>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 
 <body>
@@ -119,24 +124,34 @@ window.Quarto = {
   <li><a href="#data" id="toc-data" class="nav-link" data-scroll-target="#data"><span class="header-section-number">3</span> Data</a></li>
   <li><a href="#running-sql" id="toc-running-sql" class="nav-link" data-scroll-target="#running-sql"><span class="header-section-number">4</span> Running SQL</a></li>
   <li><a href="#final-notes" id="toc-final-notes" class="nav-link" data-scroll-target="#final-notes"><span class="header-section-number">5</span> Final notes</a></li>
-  <li><a href="#what-is-froth-flotation" id="toc-what-is-froth-flotation" class="nav-link" data-scroll-target="#what-is-froth-flotation"><span class="header-section-number">6</span> What is Froth Flotation?</a></li>
-  <li><a href="#dataset" id="toc-dataset" class="nav-link" data-scroll-target="#dataset"><span class="header-section-number">7</span> Dataset</a></li>
-  <li><a href="#your-task-1" id="toc-your-task-1" class="nav-link" data-scroll-target="#your-task-1"><span class="header-section-number">8</span> Your Task</a>
-  <ul class="collapse">
-  <li><a href="#eda" id="toc-eda" class="nav-link" data-scroll-target="#eda"><span class="header-section-number">8.1</span> EDA</a></li>
-  <li><a href="#operational-reporting" id="toc-operational-reporting" class="nav-link" data-scroll-target="#operational-reporting"><span class="header-section-number">8.2</span> Operational Reporting</a></li>
-  <li><a href="#modelling" id="toc-modelling" class="nav-link" data-scroll-target="#modelling"><span class="header-section-number">8.3</span> Modelling</a></li>
-  <li><a href="#wildcard-1" id="toc-wildcard-1" class="nav-link" data-scroll-target="#wildcard-1"><span class="header-section-number">8.4</span> Wildcard</a></li>
-  </ul></li>
-  <li><a href="#modelling-considerations" id="toc-modelling-considerations" class="nav-link" data-scroll-target="#modelling-considerations"><span class="header-section-number">9</span> Modelling: Considerations</a></li>
   </ul>
 </nav>
 </div>
-<main class="content page-columns page-full" id="quarto-document-content">
+<header 
+style="display: flex; flex-direction: row; justify-content: center;
+		max-width: 100vw; width: 100vw;
+		margin: none; z-index: 3; position: fixed;
+		padding: 1vh;"
+>
+	<p id="logo-med"
+style="letter-spacing: -0.07em; font-size: 2em; width: 75vw; max-width: 75vw; justify-self: left; font-family: 'Libre Baskerville', Serif;"
+	>
+		<a href="/" style="text-decoration: none; color: black;">
+		Datacember
+		</a>
+	</p>
+	<p id="users-name"
+	style="font-family: 'Source Sans 3', serif;"
+	>Hello {{name}} | {{points}} pts | </p>
+	<p
+	style="font-family: 'Source Sans 3', serif;"
+	><a href="/logout">Sign Out</a></p>
+</header>
+<main style="padding-top: 6vh;"  class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Froth Flotation</h1>
+<h1 class="title">SQLippery when Icy!</h1>
 </div>
 
 
@@ -155,7 +170,7 @@ window.Quarto = {
 
 <section id="antartica" class="level2" data-number="1">
 <h2 data-number="1" class="anchored" data-anchor-id="antartica"><span class="header-section-number">1</span> Antartica!</h2>
-<div class="{.columns">
+<div class="columns">
 <div class="column" style="width:100%;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
@@ -444,228 +459,6 @@ window.Quarto = {
 <p>If you are new to SQL you can find a <a href="/guide/sql"> brief guide here</a></p>
 <p>You can find additional examples and documentation on the <a href="/guides/datacember-module"> datacember module here </a></p>
 <p>See our <a href="/guides/report"> report writing guide here </a></p>
-</section>
-<section id="what-is-froth-flotation" class="level2" data-number="6">
-<h2 data-number="6" class="anchored" data-anchor-id="what-is-froth-flotation"><span class="header-section-number">6</span> What is Froth Flotation?</h2>
-<div class="columns">
-<div class="column" style="width:60%;">
-<p>Amina, Gangue and Slurry––are all part of the jargon that make the froth flotation process confusing. However this process has been instrumental in shaping the 20th century. At its core froth flotation is just a technique whereby minerals can be separated from waste material (gangue or tailings), making it an important process in extracting minerals and mineral purification.</p>
-<p>Under the hood, froth flotation works by combining minerals in an aqueous slurry. Mineral samples are hydrophillic (iron oxide included) but through the introduction of a specialist reagent (amina or amine in our data) this mineral selectively becomes hydrophobic. These now hydrophobic minerals repel water, and with the addition of air and frother, they attract to the air bubbles and float to the top of the plant, at which point the mineral has been separated from the gangue (Silica in our data).</p>
-<p>Naturally, much of the froth flotation process is underpinned by chemistry. Video aides are available <a href="https://www.youtube.com/watch?v=LGXqyNwSUIQ"> here</a></p>
-</div><div class="column" style="width:40%;">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="/static/images/cell.png" title="Flotation Cell" class="img-fluid figure-img"></p>
-<figcaption>Diagram of a Flotation Cell Taken from <a href="https://en.wikipedia.org/wiki/Froth_flotation"> wikepedia </a></figcaption>
-</figure>
-</div>
-</div>
-</div>
-<p>For this challenge, you are working with a <strong>time series</strong> dataset of froth flotation data.</p>
-</section>
-<section id="dataset" class="level2 page-columns page-full" data-number="7">
-<h2 data-number="7" class="anchored" data-anchor-id="dataset"><span class="header-section-number">7</span> Dataset</h2>
-<p>The dataset can be found <a href="https://www.kaggle.com/datasets/edumagalhaes/quality-prediction-in-a-mining-process?resource=download">here</a>.</p>
-<div class="column-body-outset">
-<table class="caption-top table">
-<colgroup>
-<col style="width: 31%">
-<col style="width: 18%">
-<col style="width: 50%">
-</colgroup>
-<thead>
-<tr class="header">
-<th><strong>Column Name</strong></th>
-<th><strong>Unit</strong></th>
-<th><strong>Description</strong></th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>Date</td>
-<td>YYYY-MM-DD</td>
-<td>The date of the recorded data.</td>
-</tr>
-<tr class="even">
-<td>% Iron Feed</td>
-<td>%</td>
-<td>Percentage of iron in the feed material.</td>
-</tr>
-<tr class="odd">
-<td>% Silica Feed</td>
-<td>%</td>
-<td>Percentage of silica in the feed material.</td>
-</tr>
-<tr class="even">
-<td>Starch Flow</td>
-<td>kg/h</td>
-<td>Flow rate of starch used in the process.</td>
-</tr>
-<tr class="odd">
-<td>Amina Flow</td>
-<td>L/h</td>
-<td>Flow rate of amina used in the process.</td>
-</tr>
-<tr class="even">
-<td>Ore Pulp Flow</td>
-<td>m³/h</td>
-<td>Flow rate of ore pulp through the system.</td>
-</tr>
-<tr class="odd">
-<td>Ore Pulp pH</td>
-<td>-</td>
-<td>pH level of the ore pulp.</td>
-</tr>
-<tr class="even">
-<td>Ore Pulp Density</td>
-<td>kg/m³</td>
-<td>Density of the ore pulp.</td>
-</tr>
-<tr class="odd">
-<td>Flotation Column 01 Air Flow</td>
-<td>m³/min</td>
-<td>Air flow rate in flotation column 01.</td>
-</tr>
-<tr class="even">
-<td>Flotation Column 02 Air Flow</td>
-<td>m³/min</td>
-<td>Air flow rate in flotation column 02.</td>
-</tr>
-<tr class="odd">
-<td>Flotation Column 03 Air Flow</td>
-<td>m³/min</td>
-<td>Air flow rate in flotation column 03.</td>
-</tr>
-<tr class="even">
-<td>Flotation Column 04 Air Flow</td>
-<td>m³/min</td>
-<td>Air flow rate in flotation column 04.</td>
-</tr>
-<tr class="odd">
-<td>Flotation Column 05 Air Flow</td>
-<td>m³/min</td>
-<td>Air flow rate in flotation column 05.</td>
-</tr>
-<tr class="even">
-<td>Flotation Column 06 Air Flow</td>
-<td>m³/min</td>
-<td>Air flow rate in flotation column 06.</td>
-</tr>
-<tr class="odd">
-<td>Flotation Column 07 Air Flow</td>
-<td>m³/min</td>
-<td>Air flow rate in flotation column 07.</td>
-</tr>
-<tr class="even">
-<td>Flotation Column 01 Level</td>
-<td>cm</td>
-<td>Pulp level in flotation column 01.</td>
-</tr>
-<tr class="odd">
-<td>Flotation Column 02 Level</td>
-<td>cm</td>
-<td>Pulp level in flotation column 02.</td>
-</tr>
-<tr class="even">
-<td>Flotation Column 03 Level</td>
-<td>cm</td>
-<td>Pulp level in flotation column 03.</td>
-</tr>
-<tr class="odd">
-<td>Flotation Column 04 Level</td>
-<td>cm</td>
-<td>Pulp level in flotation column 04.</td>
-</tr>
-<tr class="even">
-<td>Flotation Column 05 Level</td>
-<td>cm</td>
-<td>Pulp level in flotation column 05.</td>
-</tr>
-<tr class="odd">
-<td>Flotation Column 06 Level</td>
-<td>cm</td>
-<td>Pulp level in flotation column 06.</td>
-</tr>
-<tr class="even">
-<td>Flotation Column 07 Level</td>
-<td>cm</td>
-<td>Pulp level in flotation column 07.</td>
-</tr>
-<tr class="odd">
-<td>% Iron Concentrate</td>
-<td>%</td>
-<td>Percentage of iron in the concentrate material.</td>
-</tr>
-<tr class="even">
-<td>% Silica Concentrate</td>
-<td>%</td>
-<td>Percentage of silica in the concentrate material.</td>
-</tr>
-</tbody>
-</table>
-</div>
-<p>Some features are updated on an hourly basis, and others on a 20 second basis, finding which are which will be left as an excersise to the reader.</p>
-</section>
-<section id="your-task-1" class="level2 page-columns page-full" data-number="8">
-<h2 data-number="8" class="anchored" data-anchor-id="your-task-1"><span class="header-section-number">8</span> Your Task</h2>
-<p>Below are a few directions in which you can explore the data. As always, refer to the report writing guide</p>
-<section id="eda" class="level3 page-columns page-full" data-number="8.1">
-<h3 data-number="8.1" class="anchored" data-anchor-id="eda"><span class="header-section-number">8.1</span> EDA</h3>
-<p>If the froth flotation jargon is a bit too much, try importing the data with python or excel and try producing some simple data summaries. Maybe try producing a time series plot to demonstrate how the most ‘infuential’ factors determine silica concentrate</p>
-<p>Here are some leading discussion questions:</p>
-<ul>
-<li><p>What kinds of trends or associations did you notice within your data summaries?</p></li>
-<li><p>Did you notice any outliers?</p></li>
-<li><p>What factors were most pertinent or ‘influential’ in predicting Silica Concentrate?</p></li>
-</ul>
-
-<div class="no-row-height column-margin column-container"><div class="">
-<p>What kinds of statistics or plots show this? Hint: Check correlation plots and correlation</p>
-</div></div><ul>
-<li>What are the impacts of this data? Can any of your conclusions save money for the process operator?</li>
-</ul>
-</section>
-<section id="operational-reporting" class="level3" data-number="8.2">
-<h3 data-number="8.2" class="anchored" data-anchor-id="operational-reporting"><span class="header-section-number">8.2</span> Operational Reporting</h3>
-<p>How has the froth flotation plant been performing? Summarise the performance of the process, and if you find any rooms for improvment write them up into an executive summary</p>
-<p>Leading questions</p>
-<ul>
-<li><p>What metric did you use for plant performance?</p></li>
-<li><p>How does the plant perform each month by this metric?</p></li>
-<li><p>What reccoemndatiosn do you have for the plant operator?</p></li>
-</ul>
-</section>
-<section id="modelling" class="level3" data-number="8.3">
-<h3 data-number="8.3" class="anchored" data-anchor-id="modelling"><span class="header-section-number">8.3</span> Modelling</h3>
-<p>As aformentioned, with a predictive model Engineers could anticipate changes to silica concentrate, and take proactive measures to reduce uneccesary waste of iron concentrate in tailings. Try produce a model to predict Silica Concentrate.</p>
-<p>Here are some leading discussion questions for your report:</p>
-<ul>
-<li><p>What kind of model did you select? Did it take advantage of the time series data?</p></li>
-<li><p>Evaluate your models performance. What kinds of statistics did you use?</p></li>
-<li><p>Comment on any limitations with your methodology, data or approach you took.</p></li>
-</ul>
-<p>If you choose a modelling approach refer to the next section for additional modelling considerations</p>
-</section>
-<section id="wildcard-1" class="level3" data-number="8.4">
-<h3 data-number="8.4" class="anchored" data-anchor-id="wildcard-1"><span class="header-section-number">8.4</span> Wildcard</h3>
-<p>Or any other ideas you’d like to explore. Additional points for innovative tasks!</p>
-<p>Additionally, for submissions you may want to partner with another member of the challenge to contrast a regression vs a LSTM modelling approach for instance.</p>
-</section>
-</section>
-<section id="modelling-considerations" class="level2 page-columns page-full" data-number="9">
-<h2 data-number="9" class="anchored" data-anchor-id="modelling-considerations"><span class="header-section-number">9</span> Modelling: Considerations</h2>
-<p>The goal is to predict how much impurity is in the ore concentrate for the next hour interval. Impurity in this case is the ‘% of Silica’ measurment.</p>
-<p>Using this model, an engineer could take corrective action in advance and reduce the impurity.</p>
-<p>Here are a few model selections to consider.</p>
-<ul>
-<li><p>Columns 4 to 8 are meaures that are most “important” to predicting final quality.</p></li>
-<li><p>Columns 9 to 22 are process data.</p></li>
-<li><p>The final two are lab measurements</p></li>
-</ul>
-
-<div class="no-row-height column-margin column-container"><div class="">
-<p>While variable selection is at your descresion for modelling tasks, keep in mind that the last two columns % Iron Concentrate and % Silica Concentrate are likely not available in a practical setting.</p>
-</div></div><p>You may also want to remove date as a feature to prevent overfitting.</p>
 </section>
 
 </main>			<footer style="
