--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,6 @@
 		vertical-align: middle;
 	}
 
-
 	.logo {font-family: 'Libre Baskerville', Serif;}
 	.canvas-text {text-align: center;}
 	#logo-big {letter-spacing: -0.08em; font-size: 7em;}
@@ -35,6 +34,24 @@
 
 	#challenges-table {
 		width: 100%;}
+
+
+
+	/* styling the calendar widget */
+	.calendar-wrapper{width: 100%; padding-right: 1vw;}
+	.calendar-wrapper table {width: 100%; table-layout: fixed;}
+	.calendar-wrapper a {width:100%; height: 100%; text-decoration: none;}
+	.calendar-wrapper td, th {width: auto; height: auto; padding: 0; margin: 0;}
+	.day-content-wrapper{display: flex; transition: background-color 0.1s ease;align-items: start; width:100%; height: 100%;      }
+
+	#today-cal{background-color: gainsboro; width:100%; height: 50%;}
+	.events-stack-cal{display: flex; min-height: 50%; height:50%;}
+	.dates-cal{align-self: end;}
+
+	/* Hover animation */
+	.day-content-wrapper:hover {
+		background-color: #465163;}
+
 
 	</style>
 
@@ -54,6 +71,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&amp;display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+	<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
 </head>
 
@@ -64,7 +82,7 @@
 
 			<header>
 				<p id="logo-med" class="logo">Datacember</p>
-				<p id="users-name">Hello {{name}} | {{points}} pts | </p>
+				<p id="users-name">Hello {{name}} | {{points}} pts |&nbsp;</p>
 				<p><a href="/logout">Sign Out</a></p>
 			</header>
 
@@ -75,6 +93,7 @@
 					<canvas id="lorenzCanvas" width="1000%" height="491.2%" style="opacity; 0; position: absolute;"></canvas>
 					<div class="canvas-text" style="z-index: 1; position: absolute">
 						<p class="logo" id="logo-big">Datacember</p>
+						<p id="">{{welcome_message}}</p>
 					</div>
 					<!--
 <p id="logo-big" style="font-family: 'Libre Baskerville', Serif; font-size: 5em; letter-spacing: -0.09em; z-index=1; position: absolute;">
@@ -86,6 +105,38 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac felis arcu
 -->
 				</div>
 
+				{% if display_error_msg %}
+				<div id="error-msg-wrap">
+					<div id="error-message-display"
+						style="
+						border: 1px solid #ff9999;
+						background-color: #ffe6e6;
+						border-radius: 8px;
+						padding: 15px;
+						display: flex;
+						justify-content: space-between;
+						align-items: center;
+						"
+					>
+						<p>🛠️{{error_msg}}</p>
+						<button id="remove-button" type="button" style="all: unset; cursor: pointer;">❌</button>
+					</div>
+				</div>
+
+						{% endif %}
+				<script>
+				// Make the error message wrapper disappear
+				const btn = document.getElementById('remove-button');
+
+				if (btn) { // Check if the button exists to prevent errors
+					btn.addEventListener('click', () => {
+						const errorWrapper = document.getElementById('error-msg-wrap');
+						if (errorWrapper) {
+							errorWrapper.remove();
+						}
+					});
+				}
+				</script>
 
 				<script>
 				const canvas = document.getElementById('lorenzCanvas');
@@ -97,7 +148,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac felis arcu
 				const sigma = 10; // Prandtl number
 				const rho = 28; // Rayleigh number
 				const beta = 9 / 3; // Geometric factor
-				let dt = 0.003; 
+				let dt = 0.0025; 
 
 				const a = Math.random();
 				const b = Math.random();
@@ -105,7 +156,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac felis arcu
 				const d = Math.random();
 
 				const points = [];
-				const total_points = 15000;
+				const total_points = 1000;
 				const clusters = Math.max(Math.floor(Math.abs(Math.random()*3.5)), 1);
 
 				for (let c = 0; c < clusters; c++) {
@@ -114,8 +165,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac felis arcu
 					const z0 = (Math.random() - 0.5) * 50;
 
 					const width = Math.min(Math.random()+0.7, 1)/(total_points/clusters); 
-					const gamma = Math.floor(Math.random() * 250);
-					const colwidth = Math.floor(200 / clusters);
+					const gamma = Math.floor(Math.random() * 250); // col start
+					const colwidth = Math.floor(180/ clusters);
 					let l = (Math.random() + 1) * 55 / 2 + Math.floor(Math.random()) * 15;
 					l = 65; // attempt at making light adaptive hsl
 
@@ -263,20 +314,20 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac felis arcu
 							<table>
 								<tbody>
 									<tr>
-										<td><a href="/sumbissions">Submissions [WIP]</a></td>
+										<td><a href="https://forms.gle/MJ12XkJXhXo6gxmv6" target="_blank" rel="noopener noreferrer">Submissions</a></td>
+									</tr>
+
+
+									<tr>
+										<td><a href="/workbench">Workbench</a></td>
 									</tr>
 
 									<tr>
-										<td><a href="/calendar">Calendar [WIP]</a></td>
+										<td><a href="/leaderboard">Leaderboard</a></td>
 									</tr>
 
-									<tr>
-										<td><a href="/workbench">Workbench [WIP]</a></td>
-									</tr>
+									<tr><td><a href="/advent/{{today}}">🎁Advent Calendar</a></td></tr>
 
-									<tr>
-										<td><a href="/people">People [WIP CSS]</a></td>
-									</tr>
 
 									<tr>
 										<td><a href="https://discord.gg/9yBFu9GHgU" target="_blank" rel="noopener noreferrer">Discord</a></td>
@@ -290,7 +341,66 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac felis arcu
 				<div class="columns">
 					<div class="column" style="width:50%;">
 						<section id="profile" class="level2">
-							<h2 class="anchored" data-anchor-id="profile">Profile</h2>
+							<h2 class="anchored" data-anchor-id="profile">Calendar</h2>
+
+							<div class="calendar-wrapper">
+								<table id="calendar">
+									<thead>
+										<tr>
+											<th>Mon</th>
+											<th>Tue</th>
+											<th>Wed</th>
+											<th>Thu</th>
+											<th>Fri</th>
+											<th>Sat</th>
+											<th>Sun</th>	
+										</tr>
+									</thead>
+									<tbody>
+										{% for row in range(6) %}
+										<tr>
+											{% for col in range(1, 8) %}				
+											<td>
+												{% if ( col + row * 7 - 6 > 0 and col + row * 7 - 6 < 32 ) or col + row * 7 - 6 == today %}
+													{% if col + row * 7 - 6 == today %}	
+													<div id="today-cal">
+														{% endif %}
+														<div class="day-content-wrapper">
+															
+															<a href='/advent/{{col + row * 7 -6}}'>
+																<div class="dates-cal">
+																	{{col + row * 7 -6}}
+																</div>
+																<div class="events-stack-cal">
+																	{% if dateschema[col + row * 7-6].challenge %}
+																	<div class="icon-cal">🏆</div>
+																	{% endif %}
+																	{% if dateschema[col + row * 7-6].due %}
+																	<div class="icon-cal">🔔</div>
+																	{% endif %}
+																	{% if dateschema[col + row * 7-6].blog_today %}
+																	<div class="icon-cal">📝</div>
+																	{% endif %}
+																	{% if not (dateschema[col + row * 7 - 6].due or dateschema[col + row * 7 - 6].due or dateschema[col + row * 7 - 6].blog_today ) %}
+																	<div class="icon-cal">&nbsp;</div>
+																	{% endif %}
+																</div>
+															</a>
+														</div>
+														{% if col + row * 7 - 6 == today %}	
+													</div>
+													{% endif %}
+													{% endif %}
+											</td>
+											{% endfor %}
+										</tr>
+										{% endfor %}
+									</tbody>			
+								</table>
+								
+							</div>
+
+
 						</section>
 					</div><div class="column" style="width:50%;">
 						<section id="guides" class="level2">
@@ -318,7 +428,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac felis arcu
 										<td><a href="/guide/points">How Points Work</a></td>
 									</tr>
 									<tr>
-										<td><a href="/guide/sql">Running Sql</a></td>
+										<td><a href="/guide/advent">Advent</a></td>
 									</tr>
 								</tbody>
 							</table>
@@ -368,17 +478,16 @@ transform: translateX(-50%);
 					<p class="footer-title" style="font-size: 1.25em; letter-spacing: -0.07; font-family: 'Libre Baskerville', serif;">Developer</p>
 					<hr style="color: white;">
 					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="https://github.com/datacember/web">website source code</a></p>
+					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/messaging">Error Messages [Restricted]</a></p>
 				</div>
 
 
 				<div class="col" style="display:block; line-height: 1vh;">
 					<p class="footer-title" style="font-size: 1.25em; letter-spacing: -0.07; font-family: 'Libre Baskerville', serif;">Other</p>
 					<hr style="color: white;">
-					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/privacy">privacy</a></p>
-					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/privacy">privacy</a></p>
-					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/thanks">Thanks!</a></p>
+					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/thanks">Thanks! [WIP]</a></p>
 					<p style="font-size:0.8em;">contact:</p>
-					<p style="font-size:0.8em;">alexanderjwells04@gmail.com</p>
+					<p style="font-size:0.8em;">datacember@gmail.com</p>
 				</div>
 
 
