--- a/templates/stars.html
+++ b/templates/stars.html
@@ -69,13 +69,18 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <link href="/static/stars_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 
 <body>
 
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
 <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-  <nav id="TOC" role="doc-toc" class="toc-active">
+  <nav style="padding-top: 3vh;" id="TOC" role="doc-toc" class="toc-active">
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
@@ -92,7 +97,27 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   </ul>
 </nav>
 </div>
-<main class="content" id="quarto-document-content">
+<header 
+style="display: flex; flex-direction: row; justify-content: center;
+		max-width: 100vw; width: 100vw;
+		margin: none; z-index: 3; position: fixed;
+		padding: 1vh;"
+>
+	<p id="logo-med"
+style="letter-spacing: -0.07em; font-size: 2em; width: 75vw; max-width: 75vw; justify-self: left; font-family: 'Libre Baskerville', Serif;"
+	>
+		<a href="/" style="text-decoration: none; color: black;">
+		Datacember
+		</a>
+	</p>
+	<p id="users-name"
+	style="font-family: 'Source Sans 3', serif;"
+	>Hello {{name}} | {{points}} pts |&nbsp;</p>
+	<p
+	style="font-family: 'Source Sans 3', serif;"
+	><a href="/logout">Sign Out</a></p>
+</header>
+<main style="padding-top: 6vh;"  class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
@@ -225,11 +250,9 @@ transform: translateX(-45%);
 				<div class="col" style="display:block; line-height: 1vh;">
 					<p class="footer-title" style="font-size: 1.25em; letter-spacing: -0.07; font-family: 'Libre Baskerville', serif;">Other</p>
 					<hr style="color: white;">
-					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/privacy">privacy</a></p>
-					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/privacy">privacy</a></p>
 					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/thanks">Thanks!</a></p>
 					<p style="font-size:0.8em;">contact:</p>
-					<p style="font-size:0.8em;">alexanderjwells04@gmail.com</p>
+					<p style="font-size:0.8em;">datacember@gmail.com</p>
 				</div>
 
 
