guide touching up

--- a/templates/points.html
+++ b/templates/points.html
@@ -55,7 +55,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#challenge-level" id="toc-challenge-level" class="nav-link" data-scroll-target="#challenge-level"><span class="header-section-number">1.1</span> Challenge Level</a></li>
   <li><a href="#datascience-proficiency" id="toc-datascience-proficiency" class="nav-link" data-scroll-target="#datascience-proficiency"><span class="header-section-number">1.2</span> Datascience Proficiency</a></li>
   <li><a href="#novelty" id="toc-novelty" class="nav-link" data-scroll-target="#novelty"><span class="header-section-number">1.3</span> Novelty</a></li>
-  <li><a href="#featured" id="toc-featured" class="nav-link" data-scroll-target="#featured"><span class="header-section-number">1.4</span> Featured</a></li>
+  <li><a href="#advent" id="toc-advent" class="nav-link" data-scroll-target="#advent"><span class="header-section-number">1.4</span> Advent</a></li>
   <li><a href="#bug-bounty" id="toc-bug-bounty" class="nav-link" data-scroll-target="#bug-bounty"><span class="header-section-number">1.5</span> Bug Bounty</a></li>
   </ul></li>
   <li><a href="#a-few-final-notes" id="toc-a-few-final-notes" class="nav-link" data-scroll-target="#a-few-final-notes"><span class="header-section-number">2</span> A Few Final Notes</a></li>
@@ -111,7 +111,7 @@ style="letter-spacing: -0.07em; font-size: 2em; width: 75vw; max-width: 75vw; ju
 </ul>
 <p>They’re not just about competing but also about celebrating your growth throughout the challenge. Even if you don’t have the highest score, collecting points can open opportunities for recognition, blog features and bragging rights.</p>
 <p>You can view your points in the top right corner of the header.</p>
-<p>Keep in mind, points are awarded scarcely, so don’t be discouraged.</p>
+<p>Keep in mind, points are awarded sparsely, so don’t be discouraged.</p>
 <section id="how-to-win-points" class="level2" data-number="1">
 <h2 data-number="1" class="anchored" data-anchor-id="how-to-win-points"><span class="header-section-number">1</span> How to Win Points</h2>
 <p>Points are meant to represent participation in the challenge, and can be won in a few ways.</p>
@@ -136,15 +136,15 @@ style="letter-spacing: -0.07em; font-size: 2em; width: 75vw; max-width: 75vw; ju
 </section>
 <section id="novelty" class="level3" data-number="1.3">
 <h3 data-number="1.3" class="anchored" data-anchor-id="novelty"><span class="header-section-number">1.3</span> Novelty</h3>
-<p>In addition to this, there is a novelty criteria that makes up to <strong>2 points</strong>. As per the name sake, novel submissions will be appreciated, and rewarded with additional points.</p>
+<p>In addition to this, there is a novelty criteria that makes up to <strong>2 points</strong>. As per the namesake, novel submissions will be appreciated, and rewarded with additional points.</p>
 </section>
-<section id="featured" class="level3" data-number="1.4">
-<h3 data-number="1.4" class="anchored" data-anchor-id="featured"><span class="header-section-number">1.4</span> Featured</h3>
-<p>Starting week 1, a blog will be released, where the best submission will be showcased. All submissions featured within the blog will win a bounty of <strong>6 points</strong> devided among the showcased submissions.</p>
+<section id="advent" class="level3" data-number="1.4">
+<h3 data-number="1.4" class="anchored" data-anchor-id="advent"><span class="header-section-number">1.4</span> Advent</h3>
+<p>You an also win points throughout the month by playing the advent calendar. Completing the advent calendar 7 days in a row will net you 4 points. 6 days 3, 5 days will give 2 and 4 days will give 1. The count resets each week.</p>
 </section>
 <section id="bug-bounty" class="level3" data-number="1.5">
 <h3 data-number="1.5" class="anchored" data-anchor-id="bug-bounty"><span class="header-section-number">1.5</span> Bug Bounty</h3>
-<p>Find a substanticial bug within the website or security vunerability and win <strong>1 point or 2 points</strong> depending on the severity.</p>
+<p>Find a substantial bug within the website or security vulnerability and win <strong>1 point or 2 points</strong> depending on the severity.</p>
 </section>
 </section>
 <section id="a-few-final-notes" class="level2" data-number="2">
@@ -152,7 +152,7 @@ style="letter-spacing: -0.07em; font-size: 2em; width: 75vw; max-width: 75vw; ju
 <p>Due to my poor web design practices points are only updated with your session. This means that you may not see your points increase immediately upon completing a challenge or being scored, because the client side session must update.</p>
 <p>By default, the client side session expired every 3 days, but you can manually trigger a session reset by logging out and logging back in.</p>
 <p>TL;DR, <em>you may have to wait up to 3 days to see your points increase</em></p>
-<p>This points system does not have a super large impact, and is largely a measure of progress. In the spirit of the challenge, learning and participation is more important. Additionally, there are not official prizes as of yet for the victors (which may change throught the challenge). Points grading is largely discresionary and highly opinionated, so don’t take it too seriously, and focus on having fun in the challenge.</p>
+<p>This points system does not have a super large impact, and is largely a measure of progress. In the spirit of the challenge, learning and participation is more important. Additionally, there are not official prizes as of yet for the victors (which may change throught the challenge). Points grading is largely discretionary and highly opinionated, so don’t take it too seriously, and focus on having fun in the challenge.</p>
 </section>
 
 </main>			<footer style="
